@@ -1,4 +1,11 @@
-2005-11-10  Adam Piatyszek  <ediap@lespaul.et.put.poznan.pl>
+2005-11-11  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/comm/error_counters.{h,cpp}: BLERC class improved by adding
+	setup and clear flags and non default constructor. Now it is
+	possible to measure BLER for changing block sizes, e.g. in an
+	adaptive transmission.
+
+2005-11-10  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/comm/channel.cpp: fixed a minor problem with documentation
 	parsing by Doxygen (added a few lacking parentheses)
